syntax = "proto3";

package zksync.network.consensus;

import "zksync/roles/attester.proto";
import "zksync/std.proto";

message SignatureReq {
  optional roles.attester.Signed msg = 1;
}

message SignatureResp {}
